# SOFE3950

./: README.md  hello  hello.c
Lab 2/: .gitignore  .myshell.c.swp  CMakeCache.txt  CMakeLists.txt  Makefile  OSlab2  cmake_install.cmake  makefile  myshell
Lab 2/src/: help.txt  myshell.c  readme.txt
Lab 3/: .gitignore  CMakeLists.txt
Lab 3/src/: sudokuValidation.c  sudokuValidator.c
Lab 4/: CMakeLists.txt  OSLab4DD.docx
Lab 4/src/: dispatchlist.txt  hostd.c  hostd.h  queue.c  queue.h  utility.c  utility.h
